deployments/default/radarr-uhd/radarr-uhd-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: radarr-uhd-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "external"
  labels:
    app.kubernetes.io/instance: radarr-uhd
    app.kubernetes.io/name: radarr-uhd
spec:
  rules:
  - host: "radarr-uhd.devbu.io"
    http:
      paths:
      - backend:
          serviceName: radarr-uhd
          servicePort: http
        path: /api
  tls:
  - hosts:
    - "radarr-uhd.devbu.io"
